# python-chi-edge

./: CONTRIBUTING.rst  README.md  contributing.md  pyproject.toml  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql-analysis.yml  linters.yml  python-app.yml
ansible/: expose_docker.yml  setup_edge_dev.yml
ansible/roles/common/files/: cc-ansible.pub
ansible/roles/common/tasks/: install_depends.yml  main.yml
ansible/roles/docker/handlers/: main.yml
ansible/roles/nano/tasks/: headless.yml  main.yml
ansible/roles/wireguard/files/: gen_channel_conf.sh
ansible/roles/wireguard/tasks/: main.yml  print_wg_info.yml
chi_edge/: __init__.py  __main__.py  cli.py  image.py  install.py  utils.py
chi_edge/ansible/: .gitignore  __init__.py  __main__.py  defaults.yml  requirements.yml  setup_edge_dev.yml
chi_edge/ansible/roles/common/tasks/: install_depends.yml  setup_users.yml
chi_edge/ansible/roles/docker/meta/: main.yml
chi_edge/ansible/roles/docker/tasks/: main.yml
chi_edge/ansible/roles/docker/templates/: override.conf.j2
chi_edge/ansible/roles/headless/tasks/: main.yml  networkmanager.yml
chi_edge/ansible/roles/module-load/tasks/: main.yml
chi_edge/ansible/roles/nano/defaults/: main.yml
chi_edge/ansible/roles/nano/files/: docker-daemon.json
chi_edge/ansible/roles/nano/tasks/: headless.yml  kernel.yml  main.yml  networkmanager.yml
chi_edge/ansible/roles/neutron/defaults/: main.yml  ovs.yml
chi_edge/ansible/roles/neutron/handlers/: main.yml  ovs.yml
chi_edge/ansible/roles/neutron/tasks/: kuryr.yml  main.yml  ovs.yml
chi_edge/ansible/roles/neutron/templates/: kuryr.conf.j2  kuryr.json.j2  kuryr.spec.j2  neutron-openvswitch-agent.json.j2  neutron.conf.j2  openvswitch_agent.ini.j2
chi_edge/ansible/roles/openstack/defaults/: main.yml
chi_edge/ansible/roles/wireguard/defaults/: main.yml
chi_edge/ansible/roles/wireguard/files/: dhcpcd-hook  gen_key.sh  networkd-dispatcher-hook
chi_edge/ansible/roles/wireguard/tasks/: config.yml  install.yml  install_wg.yml  main.yml  setup_wg.yml
chi_edge/ansible/roles/wireguard/templates/: interfaces.j2  routes.j2  tunnel.conf.j2  wg_up.sh
chi_edge/ansible/roles/zun/defaults/: main.yml
chi_edge/ansible/roles/zun/handlers/: main.yml
chi_edge/ansible/roles/zun/metadata/: main.yml
chi_edge/ansible/roles/zun/tasks/: main.yml
chi_edge/ansible/roles/zun/templates/: zun-compute.json.j2  zun.conf.j2
tests/: __init__.py  test_cli.py  test_imports.py  test_placeholder.py  test_utils.py
