[project]
name = "python-chi-edge"
version = "0.2.4"
description = "Manage edge devices for use with the CHI@Edge IoT/Edge testbed."
authors = [{ name = "Chameleon Project", email = "contact@chameleoncloud.org" }]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.1,<9",
    "PyYAML~=6.0",
    "python-chi>=0.15.4,<0.16",
    "keystoneauth1>=4.4.0,<5",
    "rich>=11.2.0,<12",
    "fattools>=1.1.7",
]

[project.scripts]
chi-edge = "chi_edge.cli:cli"

[tool.black]
# Set line length explicitly.
# See https://black.readthedocs.io/en/stable/the_black_code_style.html#line-length for more details
line-length = 88

[dependency-groups]
dev = [
    "pytest~=6.2",
    "ruff>=0.14.5",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = ["ignore::DeprecationWarning"]


[tool.hatch.build.targets.sdist]
include = ["chi_edge"]

[tool.hatch.build.targets.wheel]
include = ["chi_edge"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
