[project]
name = "python-chi-edge"
version = "0.2.4"
description = "Manage edge devices for use with the CHI@Edge IoT/Edge testbed."
authors = [{ name = "Chameleon Project", email = "contact@chameleoncloud.org" }]
requires-python = ">=3.9"

dependencies = [
    "click",
    "PyYAML",
    "openstacksdk",
    "rich",
]

[project.scripts]
chi-edge = "chi_edge.cli:cli"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.uv]

[tool.uv.build-backend]
module-name = ["chi_edge"]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
exclude = ["chi_edge/vendor/"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.7",
]
